--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p style="font-size: 20px;"><strong>Registration Number: </strong>23BCE1297</p>
             <p style="font-size: 20px;"><strong>College/University</strong> Vellore Institute of Technology,Chennai Campus</p>
             <p style="font-size: 20px;"><i>To Know more about me Click on the link below..</i></p>
-            <a href="/oth/personal.html"><button><b>Personal Details</b></button></a>
+            <a href="personal.html"><button><b>Personal Details</b></button></a>
         </td>
         <td>
             <img src="image.png" width="210" height="210">
@@ -56,15 +56,15 @@
         <h2><i><b>Get to know me better...</b></i></h2>
         <h1><b><i> 
             Educational Details : 
-            <a href="/oth/education.html"><button><b>Education</b></button></a>
+            <a href="education.html"><button><b>Education</b></button></a>
         </i></b></h1>
         <h1><b><i> 
             My Hobbies: 
-            <a href="/oth/hobby.html"><button><b>Hobbies</b></button></a>
+            <a href="hobby.html"><button><b>Hobbies</b></button></a>
         </i></b></h1>
         <h1><b><i> 
             Skills/Certificates 
-            <a href="/oth/skills.html"><button><b>Skills</b></button></a>
+            <a href="skills.html"><button><b>Skills</b></button></a>
         </i></b></h1>
 
     </section>
